fix z-index load report

--- a/view/base/web/css/dashboard/custom.css
+++ b/view/base/web/css/dashboard/custom.css
@@ -371,4 +371,5 @@
 
 .mp-card.loading-mask {
     position: absolute;
+    z-index: 500;
 }
